Fix: bars + wrong margin

--- a/configs/.config/waybar/bar/compact-bottom/style.css
+++ b/configs/.config/waybar/bar/compact-bottom/style.css
@@ -129,8 +129,9 @@ tooltip {
 
 #disk {
     color: @love;
-    border-radius: 0px 0px 0px 0px;
+    border-radius: 10px 0px 0px 10px;
     border-left: 0px;
+    margin-left: 10px;
     border-right: 0px;
 }
 
